# django-routines

./: .codecov.yml  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  check.sh  justfile  manage.py  pyproject.toml
.github/workflows/: lint.yml  release.yml  scorecard.yml  test.yml  update_coc.yml  zizmor.yml
django_routines/: __init__.py
django_routines/management/commands/: routine.py  routines.py
doc/: .readthedocs.yaml
doc/source/: changelog.rst  conf.py  index.rst  installation.rst  reference.rst  refs.rst  settings.rst  signals.rst
doc/source/_static/: style.css
doc/source/ext/: sphinx_autosetting.py
examples/: __init__.py  dataclasses.py  dict.py  functions.py  readme.py  readme_dict.py
src/django_routines/: __init__.py  apps.py  exceptions.py  signals.py
src/django_routines/management/commands/: routine.py
tests/: __init__.py  base_settings.py  conftest.py  hooks.py  key_err_settings.py  no_routines.py  pytest_routine.py  settings.py  settings_no_typer.py  settings_option_toggle.py  settings_subproc_error.py  settings_subproc_opt_error.py  system_cmd.py  test_config.py  test_core.py  test_dataclasses.py  test_deploy.py  test_dict.py  test_hooks.py  test_initialize_finalize.py  test_misc.py  test_no_django.py  test_runs.py  test_signals.py  tests.py  throw_error.py
tests/django_routines_tests/: apps.py
tests/django_routines_tests/management/commands/: edit.py  keyerr.py  rtrack.py  track.py
tests/django_routines_tests/migrations/: 0001_initial.py
