[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "django-routines"
version = "1.3.0"
description = "Define named groups of management commands in Django settings files for batched execution."
requires-python = ">=3.9,<4.0"
authors = [
  {name = "Brian Kohan", email = "bckohan@gmail.com"},
]
license = "MIT"
license-files = [ "LICENSE" ]
readme = "README.md"
repository = "https://github.com/bckohan/django-routines"
homepage = "https://django-routines.readthedocs.io"
keywords = ["django", "CLI", "management", "routine", "routines", "batch", "commands", "deploy", "tasks", "package", "backup"]
dependencies = [
    "Django>=3.2,<6.0",
    "django-typer>=3.0,<3.1"
]
classifiers = [
    "Environment :: Console",
    "Framework :: Django",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules"
]


[tool.poetry]
packages = [{ include = "django_routines" }]


[project.urls]
"Homepage" = "https://django-routines.readthedocs.io"
"Documentation" = "https://django-routines.readthedocs.io"
"Repository" = "https://github.com/bckohan/django-routines"
"Issues" = "https://github.com/bckohan/django-routines/issues"
"Changelog" = "https://django-routines.readthedocs.io/en/latest/changelog.html"
"Code_of_Conduct" = "https://github.com/bckohan/django-routines/blob/main/CODE_OF_CONDUCT.md"


[tool.poetry.group.dev.dependencies]
ipdb = ">=0.13.13"
pytest-django = ">=4.7.0"
pytest-cov = ">=5.0.0"
aiohttp = ">=3.9.1"
pytest-env = ">=1.0.0"
pexpect = ">=4.9.0"
pyright = ">=1.1.357"
ruff = "^0.9"
django-stubs = ">=5.0.2"
mypy = ">=1.10.0"
pre-commit = "^4.0.1"
django-render-static = "^3.2.1"


[tool.poetry.group.docs]
optional = true


[tool.poetry.group.docs.dependencies]
furo = "2024.8.6"
readme-renderer = { extras = ["md"], version = "44"}
sphinxcontrib-typer = {extras = ["html", "pdf", "png"], version = "^0.5.1"}
doc8 = "^1.1.1"
Sphinx = [
    { version = "^8.0", markers = "python_version >= '3.10'" },
    { version = "^7.4", markers = "python_version < '3.10'" }
]
docutils = "^0.21"
sphinx-autobuild = "2024.10.3"
rich = ">=13.9.4"


[tool.mypy]
# The mypy configurations: http://bit.ly/2zEl9WI
# todo some stubs errors
ignore_missing_imports = true
exclude = ["tests"]


# todo doc8 configuration here is not being picked up and doesnt seem to be working
# as expected - for now pass these parameters manually
[tool.doc8]
max-line-length = 100
sphinx = true

[tool.pytest.ini_options]
# py.test options:
DJANGO_SETTINGS_MODULE = "tests.settings"
PYTHONIOENCODING = "utf-8"
python_files = "test_*.py"
norecursedirs = "*.egg .eggs dist build docs .tox .git __pycache__ shellcompletion"
env = [
    "TERMINAL_WIDTH=80",
]

addopts = [
  "--strict-markers",
  "--cov=django_routines",
  "--cov-branch",
  "--cov-report=term-missing:skip-covered"
]

[tool.coverage.run]
omit = ["tests/**/*.py"]
branch = true
source = ["tests"]
concurrency = ["multiprocessing"]
parallel = true
relative_files = true
command_line = "-m pytest --cov=django_routines"

[tool.coverage.paths]
source = [
    "django_routines"
]

[tool.pyright]
exclude = ["tests/**/*"]
include = [
    "django_routines"
]

[tool.ruff]
line-length = 88
exclude = [
    "doc",
    "dist",
    "examples"
]

[tool.ruff.lint]
exclude = [
    "tests/**/*"
]
